syntax = "proto3";
package com.example.v3mvp.proto;

message ColetaMsg {
  int64 timestamp = 1;
  double latitude = 2;
  double longitude = 3;
  float gyroX = 4;
  float gyroY = 5;
  float gyroZ = 6;
  string deviceId = 7;
  bytes foto = 8;
  string status = 9;
}
